[package]
name = "termess"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bichanna/termess"
authors = ["Nobuharu Shimazu <nobu.bichanna@gmail.com>"]
description = "Will mess your terminal"
license-file = "LICENSE"
license = "MIT"

[dependencies]
crossterm = "0.27.0"
enigo = "0.1.3"
once_cell = "1.19.0"
rand = "0.8.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# The installers to generate for each app
installers = ["shell", "npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
pr-run-mode = "plan"
